# Licenta

./: .gitignore  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
licenta/: client.py  create_keys.py  generate_obj_unlock.py  generate_unlock.py  main.py  receiver.py  rotation_worker.py  test.py
licenta/api/: auth.py  encrypt.py  encrypt_vibe.py
licenta/models/: API_request_log.py  ciphertext_object.py  create_user_output.py  handshake_input.py  handshake_output.py  node_request_log.py  public_key.py  retrieve_input.py  retrieve_output.py  store_input.py  store_output.py  user.py
licenta/services/: database_service.py  encryption_service.py  http_client.py  log_queue.py  log_service.py  node_client.py  node_signing.py  shamir_math.py  shamir_storage_service.py  shamir_storage_service_test.py  storage_service.py  storage_service_factory.py  storage_service_interface.py
licenta/tests/: shamir_storage_service_test.py
